--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
 }
 
 body {
+    display: none;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100vh; 
 }
 
 .game-container {
@@ -41,6 +42,10 @@ body {
     /* transform: scale(1.2); */
 }
 
+.title {
+    text-align: center;
+}
+
 @keyframes example {
     0%, 100% {
         transform: rotate(0deg);
@@ -54,4 +59,19 @@ body {
     75% {
         transform: rotate(5deg);
     }
+}
+
+#loadingScreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+    z-index: 1000;
 }
