--- a/style.css
+++ b/style.css
@@ -35,8 +35,29 @@ body {
     border: solid;
 }
 
+.winner {
+    animation-name: rainbow;
+    animation-iteration-count: infinite;
+    animation-duration: 4s;
+}
+
+@keyframes rainbow {
+    0%, 100% {
+        color: red;
+    }
+    25% {
+        color: blue;
+    }
+    50% {
+        color: pink;
+    }
+    75% {
+        color: green;
+    }
+}
+
 .animate {
-    animation-name: example;
+    animation-name: shake;
     animation-duration: 0.5s;
     /* transition: transform 0.5s ease; */
     /* transform: scale(1.2); */
@@ -46,7 +67,7 @@ body {
     text-align: center;
 }
 
-@keyframes example {
+@keyframes shake {
     0%, 100% {
         transform: rotate(0deg);
     }
